# QCoDeS-Plotter

./: .gitignore  Agents.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  test.py
.github/workflows/: ci.yml  repo-sync.yml
docs/: architecture.md  configuration.md  demo-data.md  distribution.md  troubleshooting.md  user-guide.md
other/: Specification.docx
qplot/: __init__.py  run.py
qplot/datahandling/: __init__.py  database.py  readDS.py
qplot/windows/: __init__.py  main.py  plot1d.py  plot2d.py  plotWin.py  run.py  setup.py  treeWidgets.py
scripts/: README.md  capture_demo_screenshots.py  liveplot.py  manual_run.py  time_stress.py
src/qplot/: __init__.py  __main__.py  _repair.py  _version.py  diagnostics.py  run.py
src/qplot/configuration/: __init__.py  config.json  config.py  config_schema.json  scripts.py
src/qplot/configuration/themes/: __init__.py  blank.py  dark.py  light.py
src/qplot/datahandling/: LoadFromDB.py  __init__.py  database.py  qcodes_cache.py  readDS.py  readSQL.py  readonly.py
src/qplot/tools/: __init__.py  general.py  operation_registry.py  plot_tools.py  subplot.py  tools.py  worker.py
src/qplot/windows/: __init__.py  _colorbar.py  _database_actions.py  _dragdrop.py  _help.py  _plot1d_snap.py  _plot1d_traces.py  _plot2d_colorbar.py  _plot2d_colorbar_dialog.py  _plot2d_sweeps.py  _plotWin.py  _plot_actions.py  _plot_axis_scaling.py  _plot_feedback.py  _plot_marquee.py  _plot_state.py  _preferences.py  _run_controls.py  _shortcuts.py  _window_controls.py  main.py  plot1d.py  plot2d.py  plotWin.py  treeWidgets.py
src/qplot/windows/_subplots/: __init__.py  subplot1d.py  subplot2d.py
src/qplot/windows/_widgets/: __init__.py  _run_formatting.py  details_tables.py  dropbox.py  operations.py  preview.py  run_list_items.py  toolbar.py  treeWidgets.py
src/qplot/windows/widgets/: __init__.py  dropbox.py  treeWidgets.py
tests/: conftest.py  liveplot.py  test.py  test_config.py  test_config_and_tools.py  test_diagnostics.py  test_package_import.py  test_tools.py  time_stress.py
tests/datahandling/: test_qcodes_cache.py  test_read_sql.py  test_readonly.py
tests/widgets/: test_operations.py  test_preview_dragdrop.py  test_run_details.py  test_run_list.py  test_themes.py
tests/windows/: test_help_menu.py  test_main_window.py  test_plot1d.py  test_plot2d.py  test_plot_integration.py  test_plot_window.py  test_preferences.py
