[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qplot"
version = "1.3.1"
authors = [{name="Ben Wordsworth", email="b.wordsworth@lancaster.ac.uk"},{name="Edward Laird", email="e.a.laird@lancaster.ac.uk"}]
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.23.0",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "PyQt5>=5.15.11",
    "pyqtgraph>=0.13.7",
    "qcodes>=0.53.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[project.scripts]
qplot = "qplot.__main__:run"
qplot-cfg = "qplot.configuration.scripts:scripts"

[project.urls]
Homepage = "https://github.com/lairdgrouplancaster/QCoDeS-Plotter.git"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"qplot" = ["**/*.json"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff.lint]
select = ["F"]
