[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qplot"
version = "1.3.1"
description = "PyQt-based viewer for completed and running QCoDeS database experiments"
readme = "README.md"
authors = [{name="Ben Wordsworth", email="b.wordsworth@lancaster.ac.uk"},{name="Edward Laird", email="e.a.laird@lancaster.ac.uk"}]
license = "MIT"
requires-python = ">=3.11"
keywords = ["qcodes", "pyqt", "pyqtgraph", "data-visualization", "scientific-computing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "jsonschema>=4.23.0",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "PyQt6>=6.8.0",
    "pyqtgraph>=0.13.7",
    "qcodes>=0.53.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[project.scripts]
qplot = "qplot.__main__:run"
qplot-cfg = "qplot.configuration.scripts:scripts"

[project.urls]
Homepage = "https://github.com/lairdgrouplancaster/QCoDeS-Plotter.git"
Source = "https://github.com/lairdgrouplancaster/QCoDeS-Plotter"
Issues = "https://github.com/lairdgrouplancaster/QCoDeS-Plotter/issues"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"qplot" = ["**/*.json"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff.lint]
select = ["F", "B"]
