[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qplot"
version = "1.4.0b1"
description = "PyQt-based viewer for completed and running QCoDeS database experiments"
readme = "README.md"
authors = [{name="Ben Wordsworth", email="b.wordsworth@lancaster.ac.uk"},{name="Edward Laird", email="e.a.laird@lancaster.ac.uk"}]
license = "MIT"
requires-python = ">=3.11"
keywords = ["qcodes", "pyqt", "pyqtgraph", "data-visualization", "scientific-computing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "jsonschema>=4.23.0",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "PyQt6>=6.8.0",
    "pyqtgraph>=0.13.7",
    "qcodes>=0.53.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "mypy>=1.14",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "twine>=5.0",
]

[project.scripts]
qplot = "qplot.__main__:run"
qplot-cfg = "qplot.configuration.scripts:scripts"

[project.urls]
Homepage = "https://github.com/lairdgrouplancaster/QCoDeS-Plotter.git"
Source = "https://github.com/lairdgrouplancaster/QCoDeS-Plotter"
Issues = "https://github.com/lairdgrouplancaster/QCoDeS-Plotter/issues"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"qplot" = ["**/*.json"]

[tool.pytest.ini_options]
addopts = "-ra --cov=qplot --cov-report=term-missing:skip-covered --cov-report=xml"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["qplot"]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
show_missing = true
skip_covered = true

[tool.ruff.lint]
select = ["F", "B", "I", "UP"]

[tool.mypy]
check_untyped_defs = true
files = [
    "src/qplot/__init__.py",
    "src/qplot/_version.py",
    "src/qplot/diagnostics.py",
    "src/qplot/tools/general.py",
    "src/qplot/tools/operation_registry.py",
    "src/qplot/tools/plot_tools.py",
    "src/qplot/windows/_widgets/_run_formatting.py",
]
ignore_missing_imports = true
no_implicit_optional = true
python_version = "3.11"
warn_unused_ignores = true
